--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.8.0",
+    "stream-chat": "^9.17.0",
+    "stream-chat-react": "^13.5.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
