--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.19.8",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
     "lucide-react": "^0.539.0",
